--- a/app/config_component/config.component.html
+++ b/app/config_component/config.component.html
@@ -1,4 +1,4 @@
-<div id="new" *ngIf="type === 'new'">
+<div id="new" *ngIf="status === STATUS.NEW">
     <form (ngSubmit)="onSubmit()">
         <div class="form-group">
             <label for="height">Height</label>
@@ -15,9 +15,26 @@
             <input id="num_mines" class="form-control" min="1"  max="{{config.height * config.width /2}}"
                    required type="number" [(ngModel)]="config.num_mines"/>
         </div>
-        <div>{{diagnostic}}</div>
 
         <button type="submit" class="btn btn-default">Start</button>
         <button type="button" class="btn btn-default" (click)="reset()">Reset</button>
     </form>
+</div>
+
+<div id="setted" *ngIf="status === STATUS.SETTLED">
+    <div class="form-group">
+        <div>Height</div>
+        <div class="form-control">{{config.height}}</div>
+    </div>
+
+    <div class="form-group">
+        <div>Width</div>
+        <div class="form-control">{{config.width}}</div>
+    </div>
+
+    <div class="form-group">
+        <div>Number of mines</div>
+        <div class="form-control">{{config.num_mines}}</div>
+    </div>
+    <button type="button" class="btn btn-default" (click)="reconfig()">Reconfig</button>
 </div>
