--- a/app/config_component/config.component.html
+++ b/app/config_component/config.component.html
@@ -37,4 +37,5 @@
         <div class="form-control">{{config.num_mines}}</div>
     </div>
     <button type="button" class="btn btn-default" (click)="reconfig()">Reconfig</button>
+    <button type="button" class="btn btn-default" (click)="restart()">Restart</button>
 </div>
