Adding win method

--- a/app/config_component/config.component.html
+++ b/app/config_component/config.component.html
@@ -36,6 +36,7 @@
         <div>Number of mines</div>
         <div class="form-control">{{config.num_mines}}</div>
     </div>
-    <button type="button" class="btn btn-default" (click)="reconfig()">Reconfig</button>
+    <button type="button" class="btn btn-default" (click)="finished()">Finished</button>
     <button type="button" class="btn btn-default" (click)="restart()">Restart</button>
+    <button type="button" class="btn btn-default" (click)="reconfig()">Reconfig</button>
 </div>
